k3s/apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: git
spec:
  type: LoadBalancer
  selector:
    app: forgejo
  ports:
    - name: web
      port: 8900
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
